--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
-DB_PASSWORD=your_secure_password
+# Database
+DB_PASSWORD=123456
 DB_PORT=3306
 DB_USER=root
+
+# Frontend
+FRONTEND_PORT=3000
+
+# Backend
+BACKEND_PORT=5000
