--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   db:
     image: mariadb:10-focal
     container_name: mariadb
+    user: root
     command: bash ./init.sh
     environment:
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD:-123456}
@@ -26,18 +27,57 @@ services:
     ports:
       - '8080:80'
     environment:
-      PMA_HOST: db
-      PMA_USER: root
+      PMA_HOST: ${DB_HOST:-db}
+      PMA_USER: ${DB_USER:-root}
       PMA_PASSWORD: ${DB_PASSWORD:-123456}
     depends_on:
       - db
     networks:
       - backnet
-      
+
+  backend:
+    build: ./backend
+    container_name: backend
+    volumes:
+      - ./backend/app:/app
+    working_dir: /app
+    user: root
+    ports:
+      - ${BACKEND_PORT:-5000}:5000
+    environment:
+      - DB_HOST=db
+      - DB_NAME=employees
+      - DB_USER=${DB_USER:-root}
+      - DB_PASSWORD=${DB_PASSWORD:-123456}
+    depends_on:
+      - db
+    networks:
+      - frontnet
+      - backnet
+
+  frontend:
+    image: node:19-alpine
+    container_name: frontend
+    working_dir: /app
+    volumes:
+      - ./frontend:/app
+    command: sh init.sh
+    user: root
+    ports:
+      - ${FRONTEND_PORT:-3000}:3000
+    networks:
+      - frontnet
+
 volumes:
   db-data:
+    driver: local
+  frontend-data:
+    driver: local
+  backend-data:
     driver: local
 
 networks:
   backnet:
+    driver: bridge
+  frontnet:
     driver: bridge
